Refactor command completion and utility classes
Wire `ReportsTabCompleter` to `PlayerDataManager` and complete `delete/resolve` names from stored player data instead of only online players. This also cleans up related internals: add `getPlayerNames()` to `PlayerDataManager`, streamline event listener handling, and refactor utility classes (`ItemUtils`, `Utils`) to safer final/composition-based designs.