@@ -1,41 +1,58 @@
 package me.xaxis.reportplus.commands;
 
-import org.bukkit.Bukkit;
+import me.xaxis.reportplus.player.PlayerDataManager;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
-import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Locale;
 
-public class ReportsTabCompleter implements TabCompleter {
+public final class ReportsTabCompleter implements TabCompleter {
+
+    private static final List<String> SUB_COMMANDS = List.of(
+            "toggle",
+            "delete",
+            "resolve"
+    );
+
+    private final PlayerDataManager playerDataManager;
+
+    public ReportsTabCompleter(PlayerDataManager playerDataManager) {
+        this.playerDataManager = playerDataManager;
+    }
+
     @Override
-    public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command,
-                                                @NotNull String alias, @NotNull String[] args) {
-
-        if (!command.getName().equalsIgnoreCase("reports")) return Collections.emptyList();
+    public @NotNull List<String> onTabComplete(
+            @NotNull CommandSender sender,
+            @NotNull Command command,
+            @NotNull String alias,
+            @NotNull String[] args
+    ) {
 
         if (args.length == 1) {
-            List<String> subCommands = new ArrayList<>();
-            subCommands.add("toggle");
-            subCommands.add("delete");
-            subCommands.add("resolve");
-            return subCommands.stream()
-                    .filter(sub -> sub.startsWith(args[0].toLowerCase()))
+            String input = args[0].toLowerCase(Locale.ROOT);
+
+            return SUB_COMMANDS.stream()
+                    .filter(subCommand -> subCommand.startsWith(input))
                     .toList();
         }
 
-        if (args.length == 2 && (args[0].equalsIgnoreCase("delete") || args[0].equalsIgnoreCase("resolve"))) {
-            return Bukkit.getOnlinePlayers().stream()
-                    .map(Player::getName)
-                    .filter(name -> name.toLowerCase().startsWith(args[1].toLowerCase()))
+        if (args.length == 2
+                && (args[0].equalsIgnoreCase("delete")
+                || args[0].equalsIgnoreCase("resolve"))) {
+
+            String input = args[1].toLowerCase(Locale.ROOT);
+
+            return playerDataManager.getPlayerNames()
+                    .stream()
+                    .filter(name ->
+                            name.toLowerCase(Locale.ROOT).startsWith(input)
+                    )
                     .toList();
         }
 
-        return Collections.emptyList();
+        return List.of();
     }
 }
